objects/Identification__c.object
<CustomObject>
    <description>SCV - Custom object to store Customer Identification System (CIS)</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Detail Relationship to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Identifications</relationshipLabel>
        <relationshipName>Identifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_State__c</fullName>
        <label>Issue State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External ID</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Identification</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Identification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identifications</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Identification for Business</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>Identification for Individual</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>